<resources>
    <string name="app_name">PetHotel</string>
    <string name="loginBtnStr">Sign In</string>
    <string name="registerBtnStr">Register</string>
    <string name="headerStr">Welcome to the Pet Hotel!</string>
    <string name="signOutBtnStr">Sign Out</string>
    <string name="numUsersLbl">Registered Users</string>
    <string name="numPetsLbl">Pets In Hotel</string>
    <string name="upcomingLBL">Recent Reservations</string>
    <string name="leavingLbl">Upcoming Sign Outs</string>
    <string name="showReservationsBtn">Show all Reservations</string>
    <string name="myPetsBtn">Show My Pets</string>
    <string name="catTxt">Cat</string>
    <string name="dogTxt">Dog</string>
    <string name="saveTxt">Save</string>
</resources>
